--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "src": "./src"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@svgr/rollup": "^2.4.1",
     "@types/jest": "^25.2.1",
     "babel-core": "^7.0.0-bridge.0",
