--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "tslint -c tslint.json 'src/*.ts{,x}'"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
     "tslint": "^6.1.2",
+    "tslint-react": "^5.0.0",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
